
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "eguard"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

once_cell = "1.19"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }

eguard-core = { path = "../eguard-core" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
